--- a/Xamarin-F#/FXamRx/Jon.FXamRx.Android/Jon.FXamRx.Android.fsproj
+++ b/Xamarin-F#/FXamRx/Jon.FXamRx.Android/Jon.FXamRx.Android.fsproj
@@ -72,14 +72,31 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="DynamicData">
+      <HintPath>..\packages\DynamicData.6.8.0.2561\lib\netstandard2.0\DynamicData.dll</HintPath>
+    </Reference>
     <Reference Include="FormsViewGroup">
       <HintPath>..\packages\Xamarin.Forms.3.5.0.169047\lib\MonoAndroid81\FormsViewGroup.dll</HintPath>
     </Reference>
     <Reference Include="FSharp.Core">
       <HintPath>..\packages\FSharp.Core.4.6.2\lib\netstandard1.6\FSharp.Core.dll</HintPath>
     </Reference>
+    <Reference Include="Java.Interop" />
+    <Reference Include="ReactiveUI">
+      <HintPath>..\packages\ReactiveUI.9.11.1\lib\monoandroid81\ReactiveUI.dll</HintPath>
+    </Reference>
+    <Reference Include="ReactiveUI.XamForms">
+      <HintPath>..\packages\ReactiveUI.XamForms.9.11.1\lib\netstandard2.0\ReactiveUI.XamForms.dll</HintPath>
+    </Reference>
+    <Reference Include="Splat">
+      <HintPath>..\packages\Splat.6.1.7\lib\monoandroid81\Splat.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Numerics" />
+    <Reference Include="System.Reactive">
+      <HintPath>..\packages\System.Reactive.4.1.3\lib\netstandard2.0\System.Reactive.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="mscorlib" />
