--- a/Xamarin-F#/FXamRx/Jon.FXamRx.Android/packages.config
+++ b/Xamarin-F#/FXamRx/Jon.FXamRx.Android/packages.config
@@ -1,6 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DynamicData" version="6.8.0.2561" targetFramework="monoandroid81" />
   <package id="FSharp.Core" version="4.6.2" targetFramework="monoandroid81" />
+  <package id="ReactiveUI" version="9.11.1" targetFramework="monoandroid81" />
+  <package id="ReactiveUI.XamForms" version="9.11.1" targetFramework="monoandroid81" />
+  <package id="Splat" version="6.1.7" targetFramework="monoandroid81" />
+  <package id="System.Reactive" version="4.1.3" targetFramework="monoandroid81" />
+  <package id="System.Runtime.InteropServices.WindowsRuntime" version="4.3.0" targetFramework="monoandroid81" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Arch.Core.Common" version="1.1.1.1" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Arch.Lifecycle.Common" version="1.1.1.1" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Arch.Lifecycle.Runtime" version="1.1.1.1" targetFramework="monoandroid81" />
